test/tests/operators/to_file/validation/error_max_size_zero.txt
error: `max_size` must be a positive number
 --> tests/operators/to_file/validation/error_max_size_zero.tql:5:36
  |
5 | to_file "/tmp/test.json", max_size=0 {
  |                                    ^ 
  |
